# MLOps-in-Action

./: pyproject.toml  test_logger.py
config/: config.yaml  paths_config.py
src/: custom_exception.py  data_ingestion.py  logger.py
utils/: common_functions.py
